--- a/authors.html
+++ b/authors.html
@@ -9,7 +9,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href='https://fonts.googleapis.com/css?family=Gentium+Book+Basic|Merriweather:400,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="/theme/css/cid.css">
+        <link rel="stylesheet" href="https://scat1619.github.io/theme/css/cid.css">
+        <link href="https://scat1619.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Numbotics Atom Feed" />
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -19,17 +20,17 @@
             <div class="container">
 
 <header class="blog-header">
-    <h1><a href="">Numbotics</a></h1>
+    <h1><a href="https://scat1619.github.io">Numbotics</a></h1>
     <p></p>
     <nav>
-        <a href="/">INDEX</a>
-        <a href="/archives">ARCHIVES</a>
-        <a href="/categories">CATEGORIES</a>
+        <a href="https://scat1619.github.io/">INDEX</a>
+        <a href="https://scat1619.github.io/archives">ARCHIVES</a>
+        <a href="https://scat1619.github.io/categories">CATEGORIES</a>
     </nav>
 </header>
     <h2>Authors on Numbotics</h2>
     <ul>
-        <li><a href="/author/kiril.html">Kiril</a> (1)</li>
+        <li><a href="https://scat1619.github.io/author/kiril.html">Kiril</a> (1)</li>
     </ul>
 
 <footer class="blog-footer">
